@@ -1172,6 +1172,12 @@
 //===== Gillotine Cross ====================
 //-- GC_CROSSIMPACT
 2022,0,500,0,2000,0,0
+//-- GC_WEAPONBLOCKING
+2028,0,2000,0,0,180000,0
+//-- GC_COUNTERSLASH
+2029,0,2000,0,0,0,0
+//-- GC_WEAPONCRUSH
+2030,0,1000,0,0,40000:80000:120000:160000:200000,0
 //-- GC_CLOAKINGEXCEED
 2033,0,2500,0,0,0,0
 //-- GC_ROLLINGCUTTER
