@@ -23,7 +23,6 @@
 //  warg = Requires to have an active warg (unmounted)
 //  ridingwarg = Requires to ride a Warg or active warg.
 //  mado = Requires to have an active mado
-//  weaponblocking = Requires to have successfully blocked an attack with Weapon Blocking
 //  poisonweapon = Requires to be under Poisoning Weapon.
 //  rollingcutter = Requires at least one Rotation Counter from Rolling Cutter.
 
@@ -677,8 +676,8 @@
 2026,0,0,1,0,0,0,99,0,0,none,0,6128,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_ANTIDOTE#Antidote#
 2027,0,0,20:24:28:32:36,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_POISONINGWEAPON#Poisoning Weapon#
 2028,0,0,40:36:32:28:24,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_WEAPONBLOCKING#Weapon Blocking#
-2029,0,0,5:8:11:14:17,0,0,0,99,0,0,weaponblocking,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_COUNTERSLASH#Counter Slash#
-2030,0,0,20,0,0,0,99,0,0,weaponblocking,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_WEAPONCRUSH#Weapon Crush#
+2029,0,0,5:8:11:14:17,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_COUNTERSLASH#Counter Slash#
+2030,0,0,20,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_WEAPONCRUSH#Weapon Crush#
 2031,0,0,30:40:50:60:70,0,0,0,99,0,0,poisonweapon,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_VENOMPRESSURE#Venom Pressure#
 2032,0,0,1,0,0,0,99,0,0,poisonweapon,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_POISONSMOKE#Poison Smoke#
 2033,0,0,45,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//GC_CLOAKINGEXCEED#Cloaking Exceed#
