@@ -387,9 +387,7 @@ enum {
 	ST_WUG = 16,
 	ST_RIDINGWUG,
 	ST_MADO,
-	//ST_WEAPONBLOCKING,
 	//ST_POISONINGWEAPON,
-	//ST_ROLLINGCUTTER,
 };
 
 enum e_skill {
