@@ -5,6 +5,10 @@
 // 	- Details.
 //========================================
 
+02/24/2010
+	r212 [pakpil]
+	* Added GC_WEAPONBLOCKING, GC_WEAPONCRUSH and GC_COUNTERSLASH skills.
+
 02/23/2010
 	r211 [pakpil]
 	* Added GC_CROSSIMPACT, GC_CLOAKINGEXCEED, GC_ROLLINGCUTTER and GC_ROLLINGCUTTER skills.
